load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "aspect_bazel_lib",
    sha256 = "e3151d87910f69cf1fc88755392d7c878034a69d6499b287bcfc00b1cf9bb415",
    strip_prefix = "bazel-lib-1.32.1",
    url = "https://github.com/aspect-build/bazel-lib/releases/download/v1.32.1/bazel-lib-v1.32.1.tar.gz",
)

load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies")

aspect_bazel_lib_dependencies()

#git_hash = ""
#archive_sha256 = ""
#
#http_archive(
#    name = "bazel-orfs",
#    sha256 = archive_sha256,
#    strip_prefix = "bazel-orfs-%s" % git_hash,
#    url = "https://github.com/The-OpenROAD-Project/bazel-orfs/archive/%s.tar.gz" % git_hash,
#)

# For now the repository is local, but we will switch to hosting bazel-orfs
# in https://github.com/The-OpenROAD-Project/ once it is ready.
local_repository(
    name = "bazel-orfs",
    path = "../bazel-orfs",
)
